--- a/locale/es.po
+++ b/locale/es.po
@@ -608,6 +608,10 @@ msgctxt "model:ir.rule.group,name:rule_group_contract"
 msgid "User in company"
 msgstr "Usuario en las empresas"
 
+msgctxt "model:ir.rule.group,name:rule_group_contract_companies"
+msgid "User in companies"
+msgstr "Usuario en las empresas"
+
 msgctxt "model:ir.rule.group,name:rule_group_contract_consumption"
 msgid "User in company"
 msgstr "Usuario en las empresas"
@@ -618,6 +622,10 @@ msgstr "Usuario en las empresas"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract_review"
 msgid "User in company"
+msgstr "Usuario en las empresas"
+
+msgctxt "model:ir.rule.group,name:rule_group_contract_review_companies"
+msgid "User in companies"
 msgstr "Usuario en las empresas"
 
 msgctxt "model:ir.sequence,name:sequence_contract"
@@ -792,11 +800,11 @@ msgstr "Factura"
 
 msgctxt "view:contract.create_consumptions.start:"
 msgid "Create Contract Consumptions up to"
-msgstr "Crear consumos desde"
+msgstr "Crear consumos hasta"
 
 msgctxt "view:contract.create_invoices.start:"
 msgid "Create invoices up to"
-msgstr "Crear facturas hasta "
+msgstr "Crear facturas hasta"
 
 msgctxt "view:contract.create_reviews.start:"
 msgid "Create Contract Reviews"
