Add warning message to prevent first_invoice_date day greater than 28 | #156898

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -550,6 +550,16 @@ msgstr ""
 " La revisió del contracte \"%(review)s\" no pot passar a \"Pendent\" perquè "
 "té línies creades."
 
+msgctxt "model:ir.message,text:msg_warning_first_invoice_date"
+msgid ""
+"The first invoice day is greater than 28. This may cause issues in "
+"generating invoices for months with fewer than 29 days, such as February. We"
+" recommend adjusting the first invoice day if necessary."
+msgstr ""
+"El primer dia de facturació és superior a 28. Això pot causar problemes en "
+"generar factures per a mesos amb menys de 29 dies, com ara febrer. Recomanem"
+" ajustar el primer dia de facturació si és necessari."
+
 msgctxt "model:ir.message,text:pending_contract"
 msgid ""
 "The party \"%(party)s\" can not be erased because he has pending contracts "
