--- a/locale/de.po
+++ b/locale/de.po
@@ -18,10 +18,6 @@ msgctxt "field:contract,currency:"
 msgid "Currency"
 msgstr "Währung"
 
-msgctxt "field:contract,currency_digits:"
-msgid "Currency Digits"
-msgstr "Währung (signifikante Stellen)"
-
 msgctxt "field:contract,end_date:"
 msgid "End Date"
 msgstr "Enddatum"
@@ -189,6 +185,10 @@ msgstr "Beschreibung"
 msgctxt "field:contract.line,end_date:"
 msgid "End Date"
 msgstr "Enddatum"
+
+msgctxt "field:contract.line,has_consumptions:"
+msgid "Has Consumptions"
+msgstr ""
 
 msgctxt "field:contract.line,last_consumption_date:"
 msgid "Last Consumption Date"
@@ -544,6 +544,17 @@ msgid ""
 "lines created."
 msgstr "Es wurden bereits Zeilen für Wiedervorlage \"%(review)s\" erzeugt."
 
+msgctxt "model:ir.message,text:msg_warning_first_invoice_date"
+msgid ""
+"The first invoice day is greater than 28. This may cause issues in "
+"generating invoices for months with fewer than 29 days, such as February. We"
+" recommend adjusting the first invoice day if necessary."
+msgstr ""
+"Der erste Rechnungstag ist größer als 28. Dies kann Probleme bei der "
+"Erstellung von Rechnungen für Monate mit weniger als 29 Tagen verursachen, "
+"wie zum Beispiel Februar. Wir empfehlen, den ersten Rechnungstag bei Bedarf "
+"anzupassen."
+
 msgctxt "model:ir.message,text:pending_contract"
 msgid ""
 "The party \"%(party)s\" can not be erased because he has pending contracts "
@@ -596,7 +607,7 @@ msgid "Processing"
 msgstr "In Arbeit"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract"
-msgid "Contract Company Rule"
+msgid "User in company"
 msgstr "Vertrag Unternehmen Regel"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract_companies"
@@ -604,11 +615,11 @@ msgid "User in companies"
 msgstr "Benutzer im Unternehmen"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract_consumption"
-msgid "Contract Consumption Company Rule"
+msgid "User in company"
 msgstr "Vertrag Abrechnung Unternehmen Regel"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract_line"
-msgid "Contract Line Company Rule"
+msgid "User in company"
 msgstr "Vertragsposition Unternehmen Regel"
 
 msgctxt "model:ir.rule.group,name:rule_group_contract_review"
