--- a/locale/es.po
+++ b/locale/es.po
@@ -552,6 +552,16 @@ msgstr ""
 "La revisión del contrato \"%(review)s\" no se puede mover a \"Pendiente\" "
 "porque tiene líneas creadas."
 
+msgctxt "model:ir.message,text:msg_warning_first_invoice_date"
+msgid ""
+"The first invoice day is greater than 28. This may cause issues in "
+"generating invoices for months with fewer than 29 days, such as February. We"
+" recommend adjusting the first invoice day if necessary."
+msgstr ""
+"El primer día de factura es mayor que 28. Esto puede causar problemas al "
+"generar facturas para meses con menos de 29 días, como febrero. Recomendamos"
+" ajustar el primer día de factura si es necesario."
+
 msgctxt "model:ir.message,text:pending_contract"
 msgid ""
 "The party \"%(party)s\" can not be erased because he has pending contracts "
