Add last_month_day_invoice field and implementaton | #156898

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -38,6 +38,10 @@ msgctxt "field:contract,interval:"
 msgid "Interval"
 msgstr "Interval"
 
+msgctxt "field:contract,last_month_day_invoice:"
+msgid "Last Month Day Invoice"
+msgstr "Facturar últim dia del mes"
+
 msgctxt "field:contract,lines:"
 msgid "Lines"
 msgstr "Línies"
@@ -552,13 +556,13 @@ msgstr ""
 
 msgctxt "model:ir.message,text:msg_warning_first_invoice_date"
 msgid ""
-"The first invoice day is greater than 28. This may cause issues in "
-"generating invoices for months with fewer than 29 days, such as February. We"
-" recommend adjusting the first invoice day if necessary."
+"The first invoice day is greater than 28. We recommend adjusting it or using"
+" the option to invoice on the last day of the month to avoid invoice issues "
+"in shorter months."
 msgstr ""
-"El primer dia de facturació és superior a 28. Això pot causar problemes en "
-"generar factures per a mesos amb menys de 29 dies, com ara febrer. Recomanem"
-" ajustar el primer dia de facturació si és necessari."
+"El primer dia de facturació és superior a 28. Recomanem ajustar-lo o "
+"utilitzar l'opció de facturar l'últim dia del mes per evitar problemes de "
+"facturació als mesos mes curts."
 
 msgctxt "model:ir.message,text:pending_contract"
 msgid ""
