--- a/locale/de.po
+++ b/locale/de.po
@@ -38,6 +38,10 @@ msgctxt "field:contract,interval:"
 msgid "Interval"
 msgstr "Intervall"
 
+msgctxt "field:contract,last_month_day_invoice:"
+msgid "Last Month Day Invoice"
+msgstr "Rechnung am letzten Tag des Monats"
+
 msgctxt "field:contract,lines:"
 msgid "Lines"
 msgstr "Positionen"
@@ -546,14 +550,13 @@ msgstr "Es wurden bereits Zeilen für Wiedervorlage \"%(review)s\" erzeugt."
 
 msgctxt "model:ir.message,text:msg_warning_first_invoice_date"
 msgid ""
-"The first invoice day is greater than 28. This may cause issues in "
-"generating invoices for months with fewer than 29 days, such as February. We"
-" recommend adjusting the first invoice day if necessary."
+"The first invoice day is greater than 28. We recommend adjusting it or using"
+" the option to invoice on the last day of the month to avoid invoice issues "
+"in shorter months."
 msgstr ""
-"Der erste Rechnungstag ist größer als 28. Dies kann Probleme bei der "
-"Erstellung von Rechnungen für Monate mit weniger als 29 Tagen verursachen, "
-"wie zum Beispiel Februar. Wir empfehlen, den ersten Rechnungstag bei Bedarf "
-"anzupassen."
+"Der erste Abrechnungstag liegt über 28. Wir empfehlen, ihn anzupassen oder "
+"die Option zu nutzen, am letzten Tag des Monats abzurechnen, um Probleme bei"
+" der Abrechnung in kürzeren Monaten zu vermeiden."
 
 msgctxt "model:ir.message,text:pending_contract"
 msgid ""
