--- a/locale/es.po
+++ b/locale/es.po
@@ -38,6 +38,10 @@ msgctxt "field:contract,interval:"
 msgid "Interval"
 msgstr "Intervalo"
 
+msgctxt "field:contract,last_month_day_invoice:"
+msgid "Last Month Day Invoice"
+msgstr "Facturar el último dia del mes"
+
 msgctxt "field:contract,lines:"
 msgid "Lines"
 msgstr "Líneas"
@@ -554,13 +558,13 @@ msgstr ""
 
 msgctxt "model:ir.message,text:msg_warning_first_invoice_date"
 msgid ""
-"The first invoice day is greater than 28. This may cause issues in "
-"generating invoices for months with fewer than 29 days, such as February. We"
-" recommend adjusting the first invoice day if necessary."
+"The first invoice day is greater than 28. We recommend adjusting it or using"
+" the option to invoice on the last day of the month to avoid invoice issues "
+"in shorter months."
 msgstr ""
-"El primer día de factura es mayor que 28. Esto puede causar problemas al "
-"generar facturas para meses con menos de 29 días, como febrero. Recomendamos"
-" ajustar el primer día de factura si es necesario."
+"El primer día de facturación es superior a 28. Recomendamos ajustarlo o "
+"utilizar la opción de facturar el último día del mes para evitar problemas "
+"de facturación en los meses más cortos."
 
 msgctxt "model:ir.message,text:pending_contract"
 msgid ""
