--- a/locale/es.po
+++ b/locale/es.po
@@ -495,8 +495,8 @@ msgstr ""
 "\"%(contract)s\" dispone de consumos."
 
 msgctxt "model:ir.message,text:cannot_draft"
-msgid "Contract \"%s\" can not be moved to draft because it has consumptions."
-msgstr "El contrato \"%s\" no se puede pasar a borrador porqué tiene consumos."
+msgid "Contract \"%(contract)s\" can not be moved to draft because it has consumptions."
+msgstr "El contrato \"%(contract)s\" no se puede pasar a borrador porqué tiene consumos."
 
 msgctxt "model:ir.message,text:cannot_finish"
 msgid ""
